--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,16 @@
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+/* the 'body' selector is required for the tests to pass */
+/* You can change the style attributes if you want */
+body {
+  background-color: #222;
+  color: #ddd;
+  text-align: center;
+  font-family: sans-serif;
 }
 
-.container {
-	margin-top: 5rem;
-	text-align: center;
-	font-size: 2rem;
+h1 {
+  font-size: 4em;
+}
+
+input[type=text], label {
+  margin-bottom: 8px;
 }
