--- a/public/style.css
+++ b/public/style.css
@@ -1,35 +1,15 @@
-/****** Main Styling ******/
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: sans-serif;
+}
 
-body {
-	font-family: 'Roboto', sans-serif;
-	font-size: 16px;
-	color: #222;
-	background-color: #ECF0F1;
-	text-align: center;
+body{
+	background-color: #f4f4f4;
 }
 
 .container {
-	padding: 0;
-	margin-top: 40px;
-}
-
-.footer {
-	margin-top: 60px;
-}
-
-ol {
-	list-style-position: inside;
-}
-ul {
-	list-style-type: none;
-}
-
-a {
-	color: #2574A9;
-}
-/****** Logo Div Styling ******/
-
-img {
-	margin: 20px auto 0 auto;
-	display: block;
+	margin-top: 3rem;
+	text-align: center;
 }
