--- a/views/index.html
+++ b/views/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
-
    <head>
-      <title>Backend Challenges | Free Code Camp</title>
-      <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+      <title>Node-Express-tut</title>
       <link href="/public/style.css" rel="stylesheet" type="text/css">
    </head>
-
    <body>
       <div class="container">
-         <h1>Manage Node.js projects and npm packages using package.json</h1>
-         <h3>Part 1 of Free Code Camp Backend Challenges</h3>
+         <h1>This is a tutorial project for learning Node, Express & MongoDB</h1>
+         <p>-By: Rajat Gupta</p>
       </div>
    </body>
-
 </html>
