--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,32 @@
       <div class="container">
          <h1>This is a tutorial project for learning Node, Express & MongoDB</h1>
          <p>-By: Rajat Gupta</p>
+
+         <p>Please fill the form </p>
+         <form action="/name" method="post" >
+            <input placeholder="First Name" name="first" type="text">
+            <input placeholder="Last Name" name="last" type="text">
+            <input type="submit" value="Submit">
+         </form>
+
+         <p>After filling the form, visit <a href="/name">Link</a> to know yourself :)</p>
+
+         <p>Links are: </p>
+         <ul>
+            <li>
+               <a href="/">Home</a>
+            </li>
+            <li>
+               <a href="/json">Hello World</a>
+            </li>
+            <li>
+               <a href="/new-user">Date & Time</a>
+            </li>
+            <li>
+               <a href="/users/1/photos/1/">First photo of user One</a>
+            </li>
+
+         </ul>
       </div>
    </body>
 </html>
