--- a/public/style.css
+++ b/public/style.css
@@ -13,3 +13,26 @@ body{
 	margin-top: 3rem;
 	text-align: center;
 }
+
+form{
+	margin: 2rem auto;
+	padding: 2rem;
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	border: 1px solid #333;
+}
+
+input{
+	margin: .25rem 0;
+	padding: .5rem 1rem;
+}
+
+li{
+	margin: .5rem 0;
+}
+
+a{
+	text-decoration: none;
+	color: blue;
+}
